--- a/pom.xml
+++ b/pom.xml
@@ -15,8 +15,8 @@
     <groupId>com.jardinssuspendus</groupId>
     <artifactId>jardins-suspendus-backend</artifactId>
     <version>1.0.0</version>
-    <name>Les Jardins Suspendus</name>
-    <description>Système de réservation pour maison d'hôtes</description>
+    <name>jardins-suspendus-backend</name>
+    <description>Systeme de reservation pour maison d hotes</description>
 
     <properties>
         <java.version>17</java.version>
@@ -110,7 +110,6 @@
     <build>
         <finalName>jardins-suspendus-backend-1.0.0</finalName>
         <plugins>
-            <!-- Spring Boot Maven Plugin -->
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
@@ -124,11 +123,10 @@
                 </configuration>
             </plugin>
             
-            <!-- Maven Compiler Plugin avec configuration Lombok -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.11.0</version>
+                <version>3.8.1</version>
                 <configuration>
                     <source>17</source>
                     <target>17</target>
